Simplified website structure in _quarto.yml

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,10 +8,8 @@ website:
     left:
       - href: index.qmd
         text: Home
-      - href: about.qmd
-        text: About
-      - href: resume.qmd
-        text: Resume
+      - about.qmd
+      - resume.qmd
 
 format:
   html:
