Added Google Analytics Tag

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,6 +5,7 @@ project:
 website:
   title: "Marco Bravo"
   favicon: "images/favicon.jpg"
+  google-analytics: "G-XYECR0MZCR"
   search: 
     location: navbar
     type: textbox
@@ -51,3 +52,4 @@ format:
 
 execute:
   freeze: auto
+  
