--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,8 +5,7 @@ project:
 website:
   title: "Marco Bravo"
   favicon: "images/favicon.jpg"
-  google-analytics:
-    tracking-id: "G-XYECR0MZCR"
+  google-analytics: G-XYECR0MZCR
   search: 
     location: navbar
     type: textbox
