Adding the quotes back

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 website:
-  google-analytics: G-XYECR0MZCR
+  google-analytics: "G-XYECR0MZCR"
   title: "Marco Bravo"
   favicon: "images/favicon.jpg"
   search: 
