--- a/_quarto.yml
+++ b/_quarto.yml
@@ -26,6 +26,8 @@ website:
         href: resume.qmd
       - text: Projects
         href: projects.qmd
+      - text: Posts
+        href: posts.qmd
         
     right:
       - icon: github
