--- a/_quarto.yml
+++ b/_quarto.yml
@@ -28,6 +28,8 @@ website:
         href: projects.qmd
       - text: Posts
         href: posts.qmd
+      - text: Talks
+        href: talks.qmd
         
     right:
       - icon: github
